# dashcam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_install.sh  dashcam.service  dashcam.service.template  dev_build.sh  log.txt  moov.txt  network_perms.sh  output.mkv  output_08-08-2024_092500.mkv  rpi_setup.txt  test.service
dashcam_web_static/: index.html
dashcam_web_static/css/: main.css
dashcam_web_static/js/: main.js
http_static_files/: index.html
http_static_files/js/: main.js
recordings/: output_07-31-2024_215416.mkv
src/: CMakeLists.txt  CamRecorder.cc  CamRecorder.h  CamService.cc  CamService.h  CameraRecorder.cc  CameraRecorder.h  GstRecordingPipeline.cc  GstRecordingPipeline.h  HlsPipeline.cc  HlsPipeline.h  HlsPipelineSink.cc  HlsPipelineSink.h  HttpServer.cc  HttpServer.h  LibcameraHlsPipeline.cc  LibcameraHlsPipeline.h  LibcameraPipelineSource.cc  LibcameraPipelineSource.h  LibcameraPipelineSrc.cc  LibcameraPipelineSrc.h  RecordingPipeline.cc  RecordingPipeline.h  TsFilePipelineSink.cc  TsFilePipelineSink.h  TsFileSinkPipeline.cc  TsFileSinkPipeline.h  V4l2HlsPipeline.cc  V4l2HlsPipeline.h  V4l2PipelineSource.cc  V4l2PipelineSource.h  V4l2PipelineSrc.cc  V4l2PipelineSrc.h  main.cc  utilities.cc  utilities.h
src/old_reference_src/: CamRecorder.cc  CamRecorder.h  CameraRecorder.cc  CameraRecorder.cc.old  CameraRecorder.h  GstRecordingPipeline.cc  HttpServer.cc  HttpServer.h
utils/: sys_monitor  system_monitor.cc
